# NumCompute-Stream

./: .gitignore  README.md  pyproject.toml
benchmark/: run_benchmarks.py
demo/: demo.ipynb  demo.py
numcompute_stream/: __init__.py  ensemble.py  io.py  metrics.py  pipeline.py  preprocessing.py  stats.py  stream.py  tree.py  visualise.py
test/: test_all.py
tests/: test_all.py
