[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "numcompute-stream"
version = "0.1.0"
description = "Streaming decision tree ML framework — NumPy only"
requires-python = ">=3.10"
dependencies = ["numpy>=1.26", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]